--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,26 @@
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridView_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
 
     android:numColumns="auto_fit"
-    android:columnWidth="100dp"
-    android:horizontalSpacing="2dp"
+    android:columnWidth="110dp"
+    android:horizontalSpacing="0dp"
     android:verticalSpacing="5dp"
     android:stretchMode="columnWidth"
     android:gravity="center">
 
 </GridView>
+
+</LinearLayout>
